robots: Add robots
Signed-off-by: jooojub <jooojub@gmail.com>

--- a/jooojub/posts/gnuc/NULL/2019-06-30-NULL.md
+++ b/jooojub/posts/gnuc/NULL/2019-06-30-NULL.md
@@ -2,8 +2,10 @@
 layout: post
 title:  "NULL != 0"
 date:   2019-06-30
-share:	false
+share:	true
 tags: [GNUC]
+keywords: [gunc, c, NULL]
+descriptions: "As we can see from the results of pre-process, `NULL` was replace by ((void *)0)"
 ---
 
 Environmets:
