--- a/jooojub/posts/gnuc/NULL/2019-06-30-NULL.md
+++ b/jooojub/posts/gnuc/NULL/2019-06-30-NULL.md
@@ -15,10 +15,10 @@ Environmets:
 
 All content is written based on GNU C.
 
-As most people know, NULL is not zero in GNU C.
+GNU C에서 NULL과 0은 같지 않다는 것은 알고 있을 것입니다.
 > NULL != 0
 
-So what is `NULL`? Can easily check it by using sample code.
+그래서 `NULL`이 뭔가요? 간단한 sample code로 쉽게 확인해 봅시다.
 
 ### Check with sample code
 #### -> sample source code: null.c
@@ -55,10 +55,10 @@ int main(void) {
 ...
 }
 {% endhighlight %}
-As we can see from the results of pre-process, `NULL` was replace by ((void *)0).
+pre-process의 결과에서 볼 수 있듯이, `NULL` 은 ((void *)0) 로 replace 됩니다.
 > NULL == ((void *)0)
 
-What happens if include `stdio.h` instead of `stddef.h`?
+`stddef.h` 대신 `stdio.h`를 include 하면 어떨까요?
 
 #### -> include `stdio.h` instead of `stddef.h`
 {% highlight c %}
@@ -85,8 +85,9 @@ int main(void) {
 }
 {% endhighlight %}
 
-The results are the same. This is because NULL is not defined in `stdio.h`, and just include `stddef.h`.
-If NULL is defined in `stdio.h`, it is redefined by `stddef.h`.
+결과는 동일합니다.<br>
+왜냐하면 NULL은 `stdio.h`에 정의되어 있지 않고, 단지 `stddef.h`를 include 하고 있기 때문입니다.<br>
+만약 NULL이 `stdio.h`에 정의되어 있었다면, `stddef.h`에 의해 re-defined 되었을 겁니다.
 
 #### -> `stddef.h` is also included by `stdio.h`
 {% highlight c %}
@@ -110,7 +111,8 @@ If NULL is defined in `stdio.h`, it is redefined by `stddef.h`.
 #include <stddef.h>
 ...
 {% endhighlight %}
-Looking at `stddef.h` in gcc, `NULL` is defined as follows.
+gcc의 `stddef.h`를 살펴보면, `NULL`은 다음과 같이 정의되어 있습니다.
+
 #### -> NULL definition in `stddef.h`
 {% highlight c %}
 /* A null pointer constant.  */
@@ -130,7 +132,7 @@ Looking at `stddef.h` in gcc, `NULL` is defined as follows.
 #undef	__need_NULL
 {% endhighlight %}
 
-Note that in GNU C++ compiler[^1] NULL is defined as `__null`, and in C++[^2] defined as 0.
+GNU C++ compiler[^1]에서의 NULL은 `__null`로 정의되어 있으며, C++[^2]에서는 0으로 정의되어 있습니다.
 
 [^1]: GNU C++ = (__GNUG __=__ GNUC__&&__cplusplus)
 
@@ -148,10 +150,10 @@ int main(void) {
 	__null
 ...
 {% endhighlight %}
-Then,<br>
-Does the problem occur when use 0 instead of NULL or vice versa?<br>
-The most significant difference between 0 and NULL is that 0 is `int` and NULL is `void *`<br>.
-In other words, on a 64-bit machine, the sizes of 0 and NULL will be different.
+그렇다면,<br>
+0 대신 NULL을 사용하거나, NULL 대신 0을 사용하면 문제가 발생할까요?<br>
+0과 NULL의 가장 중요한 차이점은 0은 `int` 이며 NULL은 `void *` 라는 점입니다.<br>
+다시 말해, 64-bit machine에서는 0과 NULL의 사이즈가 다를 겁니다.
 
 #### -> sizeof NULL in 64-bit
 {% highlight c %}
@@ -167,7 +169,8 @@ int main(void) {
 {% highlight c %}
 sizeof(0): 4, sizeof(NULL): 8
 {% endhighlight %}
-Therefore, putting a 0 in the expectation of NULL makes it possible to pop an un-intended value of 4-bytes. The most easily conceivable situation is va_arg (val, *).
+그러므로, NULL을 기대하는 곳에 0을 넣으면 사이즈가 다르기 때문에 문제가 발생할 수 있습니다.<br>
+이러한 문제는 Variable-length Argument(e.g. va_arg (val, *)....)를 사용하는 곳에서 쉽게 드러납니다.
 
 #### -> problem examples when put 0 not NULL
 {% highlight c %}
@@ -197,7 +200,8 @@ int main(void) {
 }
 {% endhighlight %}
 
-va_arg expects a char* pointer with a va argument, so it will try to pop 8-bytes on the stack. But if put 0 in place of `NULL`, 4-byte stack overflow will occur.
+expect() 함수는 va argument로 char* pointer를 기대하고 있습니다.<br>
+그래서 8-byte를 stack에서 pop 할 것이고, 만약 `NULL`대신 0을 넣었다면, 4-byte stack overflow가 발생할 것입니다.
 
 #### -> compile with gcc-4
 {% highlight bash %}
@@ -234,8 +238,9 @@ value: iii
 {% endhighlight %}
 </div>
 
-For reference, In gcc-7, That issues can not be reproduced.
-looked at the code compiled with gcc-7, compiled to use `pushq` when passing arguments instead of `push`. The compiler seems to be smarter.
+참고로, gcc-7 이상에서는 위 코드로 문제가 재현 안될 것입니다.<br>
+gcc-7의 코드를 살펴보면, argument를 넘길 때, `push` 대신 `pushq`를 사용하도록 compile이 됩니다.<br>
+gcc가 점점 똑똑해지네요.
 
 {% highlight x86asm %}
 ...
@@ -244,7 +249,7 @@ looked at the code compiled with gcc-7, compiled to use `pushq` when passing arg
 ...
 {% endhighlight %}
 
-The functions of the execl family are guided by the that should pass NULL instead of 0 like this.
+execl 류의 함수들의 man page를 살펴보면, 0 대신 NULL을 사용하라고 강조합니다.
 
 ***
 <table>
@@ -266,8 +271,8 @@ The functions of the execl family are guided by the that should pass NULL instea
 </table>
 ***
 
-
-The execl implementation of glibc shows why. The execl function expects NULL to counter argc.
+glibc의 execl의 코드를 살펴보면 이유를 알 수 있습니다.<br>
+execl 함수는 argc의 갯수를 알기 위해 NULL을 사용합니다.
 
 #### -> glibc/posix/execl.c
 {% highlight c %}
@@ -291,6 +296,9 @@ execl (const char *path, const char *arg, ...)
   va_end (ap);
 ....
 {% endhighlight %}
+
+결론적으로, `NULL != 0` 이라는 것을 항상 인지하고 서로 혼용해서 사용하는 것은 피해야 할 것 같네요.
+
 <div align="right">
 jooojub.
 </div>
